status msg in socket, new game layout, fixed blurry canvas, additional styling

--- a/front/assets/styles.css
+++ b/front/assets/styles.css
@@ -4,6 +4,7 @@
     --blue: #4988FF;
     --bg-blue: 344C65;
     --dark-blue: #2E4257;
+    --dark-bg: #1f2d3d;
     --pink: #d73993;
     --light-pink: #F0EEF6;
 
@@ -94,20 +95,22 @@ h3 {
     h4 {
         color: white;
         font-size: 18px;
-        text-shadow: 1px 1px 4px rgb(0, 132, 255);
         color: var(--accent-color);
         color: rgb(0, 132, 255);
-        text-shadow: 1px 1px 6px var(--accent-color);
+        /* text-shadow: 1px 1px 6px var(--accent-color); */
+        text-shadow: 1px 1px 4px rgb(0, 132, 255);
 }
 p {
     color: var(--accent-color);
-    color: rgb(236, 236, 236);
+    color: rgb(240, 240, 240);
     margin-bottom: 0;
+    /* color: rgb(0, 132, 255);
+    text-shadow: 1px 1px 4px rgb(0, 132, 255); */
 }
 
 a {
     color: var(--accent-color);
-        color: rgb(236, 236, 236);
+        color: rgb(240, 240, 240);
         color: rgb(0, 132, 255);
         text-shadow: 1px 1px 4px rgb(0, 132, 255);
 }
@@ -228,18 +231,36 @@ b {
 }
 
 .game-panel {
-    background-color: var(--dark-blue);
-    /* width: 20%; */
+    background-color: var(--dark-bg);
+    border-right: 1px solid var(--dark-blue);
+    width: 30%;
 }
 
 #game-canvas {
-    height: 100vh;
+    height: 80vh;
     border: 1px solid var(--accent-color);
     box-shadow: 1px 2px 3px var(--accent-color);
-    position: absolute;
-    top: 0;
-    right: 0;
-    /* box-sizing: border-box; */
-    /* border box thing */
-    /* width: 80vw; */
+    padding: 0;
+    /* width: 100%; */
+}
+
+.btn {
+    border-radius: 5px;
+    border: 1px solid var(--accent-color);
+    padding: 10px 20px 10px 20px;
+    background-color: var(--accent-color);
+    color: rgb(200, 200, 220);
+    text-shadow: 1px 1px 4px rgb(200, 200, 220);    
+}
+
+#game-ready-btn-kuk {
+    font-size: 26px;
+    /* padding: 0;
+    margin: 0;  */
+    height: 50%;
+}
+
+.btn:hover {
+    color: var(--accent-color);
+    background-color: #cd5197;
 }
